# doip-definitions

./: .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  README.md  lcov.info  pyproject.toml  rustc-ice-2025-02-26T22_48_54-24908.txt  tarpaulin-report.html
.github/workflows/: tests.yml
.gitlab/issue_templates/: Default.md
.gitlab/merge_request_templates/: Default.md  templates_1.md  templates_2.md
src/: bindings.rs  definitions.rs  doip_header.rs  doip_message.rs  doip_payload.rs  error.rs  header.rs  lib.rs  message_proto.rs  types.rs  utils.rs
src/bindings/: mod.rs
src/builder/: mod.rs
src/definitions/: mod.rs
src/doip_header/: mod.rs  payload_type.rs  version.rs
src/doip_message/: action_code.rs  activation_code.rs  activation_type.rs  alive_check_request.rs  alive_check_response.rs  diagnostic_ack.rs  diagnostic_message.rs  diagnostic_message_ack.rs  diagnostic_message_nack.rs  diagnostic_nack.rs  doip_message.rs  entity_status_request.rs  entity_status_response.rs  generic_nack.rs  message.rs  mod.rs  nack_code.rs  node_type.rs  power_information_request.rs  power_information_response.rs  power_mode.rs  routing_activation_request.rs  routing_activation_response.rs  sync_status.rs  vehicle_announcement_message.rs  vehicle_identification_request.rs  vehicle_identification_request_eid.rs  vehicle_identification_request_vin.rs
src/doip_payload/: action_code.rs  activation_code.rs  activation_type.rs  alive_check_request.rs  alive_check_response.rs  diagnostic_ack.rs  diagnostic_message.rs  diagnostic_message_ack.rs  diagnostic_message_nack.rs  diagnostic_nack.rs  entity_status_request.rs  entity_status_response.rs  generic_nack.rs  message.rs  mod.rs  nack_code.rs  node_type.rs  power_information_request.rs  power_information_response.rs  power_mode.rs  routing_activation_request.rs  routing_activation_response.rs  sync_status.rs  vehicle_announcement_message.rs  vehicle_identification_request.rs  vehicle_identification_request_eid.rs  vehicle_identification_request_vin.rs
src/header/: payload_proto.rs
src/header/payload_proto/: alive_check_request.rs  alive_check_response.rs  diagnostic_message.rs  diagnostic_message_ack.rs  diagnostic_message_nack.rs  doip_payload.rs  entity_status_request.rs  entity_status_response.rs  generic_nack.rs  power_information_request.rs  power_information_response.rs  routing_activation_request.rs  routing_activation_response.rs  vehicle_announcement_message.rs  vehicle_identification_request.rs  vehicle_identification_request_eid.rs  vehicle_identification_request_vin.rs
src/message_proto/: action_code.rs  activation_type.rs  diagnostic_nack.rs  doip_message.rs  nack_code.rs  node_type.rs  power_mode.rs
src/utils/: alive_check_request.rs  alive_check_response.rs  diagnostic_message.rs  diagnostic_message_ack.rs  diagnostic_message_nack.rs  entity_status_request.rs  entity_status_response.rs  generic_nack.rs  power_information_request.rs  power_information_response.rs  routing_activation_request.rs  routing_activation_response.rs  vehicle_announcement_message.rs  vehicle_identification_request.rs  vehicle_identification_request_eid.rs  vehicle_identification_request_vin.rs
