[package]
name = "doip-definitions"
version = "3.0.7"
authors = ["Samuel Preston <samp.reston@outlook.com>"]
edition = "2021"
description = "A Diagnostics over Internet Protocol (DoIP) definition library for use in DoIP applications."
readme = "README.md"
repository = "https://github.com/samp-reston/doip-definitions"
license = "MIT"
keywords = ["doip", "diagnostics", "vehicle", "standards"]
categories = ["development-tools", "network-programming"]

[profile.dev]
panic = "abort"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[profile.test]
opt-level = 0
debug = true

[lib]
name = "doip_definitions"

[dependencies]

[features]
default = []
no_std = []  # enable no_std

[package.metadata]
rust-analyzer = { checkOnSave.extraArgs = [
  "--check-cfg",
  "cfg(rust_analyzer)",
] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(rust_analyzer)"] }
