[project]
name = "doip-definitions"
version = "3.0.1"
description = "A Diagnostics over Internet Protocol (DoIP) definition library for use in DoIP applications."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
features = ["pyo3/extension-module"]